--- a/index.html
+++ b/index.html
@@ -7,28 +7,32 @@
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
 </head>
-<body>
+<body class="gutter">
   <table>
-    <caption>November, 1963</caption>
+    <caption class="text-center giga pad-t">November, 1963</caption>
     <thead>
-      <th scope="col">Sun</th>
-      <th scope="col">Mon</th>
-      <th scope="col">Tue</th>
-      <th scope="col">Wed</th>
-      <th scope="col">Thu</th>
-      <th scope="col">Fri</th>
-      <th scope="col">Sat</th>
+      <tr>
+        <th scope="col">Sun</th>
+        <th scope="col">Mon</th>
+        <th scope="col">Tue</th>
+        <th scope="col">Wed</th>
+        <th scope="col">Thu</th>
+        <th scope="col">Fri</th>
+        <th scope="col">Sat</th>
+      </tr>
     </thead>
     <tbody>
       <tr>
+        <td colspan="5"></td>
         <td>
-          <div>
+          <div class="text-right">
             1
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             2
           </div>
         </td>
@@ -36,10 +40,10 @@
 
       <tr>
         <td>
-          <div>
+          <div class="text-right">
             3
           </div>
-          <ul>
+          <ul class="list-group event">
             <li>Vostok 3 & 6 launched</li>
           </ul>
         </td>
@@ -49,27 +53,27 @@
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             5
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             6
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             7
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             8
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             9
           </div>
         </td>
@@ -77,45 +81,45 @@
 
       <tr>
         <td>
-          <div>
+          <div class="text-right">
             10
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             11
           </div>
-          <ul>
-            <li>Remembrance Day</li>
+          <ul class="list-group event">
+            <li class="event-red">Remembrance Day</li>
             <li>Kosmos 21 failed to escape orbit</li>
           </ul>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             12
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             13
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             14
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             15
           </div>
-          <ul>
-            <li>Surtsey Island created</li>
-            <li>Robert W. Smith set altitude record</li>
+          <ul class="list-group">
+            <li class="event event-green">Surtsey Island created</li>
+            <li class="event event-green">Robert W. Smith set altitude record</li>
           </ul>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             16
           </div>
         </td>
@@ -123,46 +127,46 @@
 
       <tr>
         <td>
-          <div>
+          <div class="text-right">
             17
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             18
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             19
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             20
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             21
           </div>
-          <ul>
+          <ul class="list-group event">
             <li>India launched its first rocket</li>
           </ul>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             22
           </div>
-          <ul>
+          <ul class="list-group event event-blue">
             <li>Death of Aldous Huxley</li>
           </ul>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             23
           </div>
-          <ul>
+          <ul class="list-group event event-blue">
             <li>Doctor Who premiered</li>
           </ul>
         </td>
@@ -170,47 +174,46 @@
 
       <tr>
         <td>
-          <div>
+          <div class="text-right">
             24
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             25
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             26
           </div>
-          <ul>
+          <ul class="list-group event">
             <li>Explorer 18 launched</li>
           </ul>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             27
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             28
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             29
           </div>
         </td>
         <td>
-          <div>
+          <div class="text-right">
             30
           </div>
         </td>
       </tr>
     </tbody>
   </table>
-
 
 </body>
 </html>
